updated all the hyperlink, so that they can work

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ by commenting this style tag and then by uncommenting it -->
     </tr>
   </table>
   <hr size="2" noshade>
-  <p><a href="F:\Java Atom Programs\HTML - Personal Site\My-hobbies.html">Click here to see my book Recommendation</a></p>
+  <p><a href="My-hobbies.html">Click here to see my book Recommendation</a></p>
   <h3>My Hobbies and The things that I like doing.</h3>
   <p>
   <ol>
@@ -189,7 +189,7 @@ by commenting this style tag and then by uncommenting it -->
 
 </table>
   <hr size="2" noshade>
-  <p><a href="F:\Java Atom Programs\HTML - Personal Site\contact-me.html"><strong>Contact me</strong></a></p>
+  <p><a href="contact-me.html"><strong>Contact me</strong></a></p>
 
 
 </body>
